aligned table columns, fixed sizes for table elements

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -103,6 +103,14 @@ th{
   flex-direction: column;
 }
 
+table {
+  width: 1000px;
+}
+
+.td-button {
+  width: 50px;
+}
+
 
 button {
   background-color: var(--blush);
@@ -157,7 +165,7 @@ form {
 td {
   padding-right: 10px;
   text-align: left;
-  min-width: 100px;
+  width:150px;
 }
 
 th {
